--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   <body>
     <h1>Rock, Paper, Scissors</h1>
-    <h2>Say Shoot!</h2>
+    <h2>Choose Wisely</h2>
+
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+
     <script src="app.js"></script>
   </body>
 </html>
