Put buttons in a div container and added a results section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
   <body>
     <h1>Rock, Paper, Scissors</h1>
     <h2>Choose Wisely</h2>
+    <div class="choices">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
 
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
-
+    <div class="results">
+      <div>You: <span id="player-score">0</span></div>
+      <div>Computer <span id="computer-score">0</span></div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
