--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
     <div class="results">
       <div>You: <span id="player-score">0</span></div>
-      <div>Computer <span id="computer-score">0</span></div>
+      <div>Computer: <span id="computer-score">0</span></div>
+      <div><span id="results-phrase"></span></div>
     </div>
     <script src="app.js"></script>
   </body>
