--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Rock, Paper Scissors</title>
   </head>
   <body>
@@ -14,7 +15,6 @@
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
     </div>
-
     <div class="results">
       <div>You: <span id="player-score">0</span></div>
       <div>Computer: <span id="computer-score">0</span></div>
