--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <h1>Rock, Paper, Scissors</h1>
-    <h2>Choose Wisely</h2>
+    <h2><em>Choose Wisely</em></h2>
     <div class="choices">
       <button id="rock">Rock</button>
       <button id="paper">Paper</button>
       <button id="scissors">Scissors</button>
     </div>
     <div class="results">
-      <div>You: <span id="player-score">0</span></div>
-      <div>Computer: <span id="computer-score">0</span></div>
+      <div class="player">You: <span id="player-score">0</span></div>
+      <div class="computer">Computer: <span id="computer-score">0</span></div>
       <div><span id="results-phrase"></span></div>
     </div>
     <script src="app.js"></script>
