--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <h1>Rock, Paper, Scissors</h1>
     <h2><em>Choose Wisely</em></h2>
     <div class="choices">
-      <button id="rock">Rock</button>
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
+      <button id="rock">🪨</button>
+      <button id="paper">📜</button>
+      <button id="scissors">✂️</button>
     </div>
     <div class="results">
       <div class="player">You: <span id="player-score">0</span></div>
