Added a footer to the GitHub repository

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
       <div class="computer">Computer: <span id="computer-score">0</span></div>
       <div><span id="results-phrase"></span></div>
     </div>
+    <footer>
+      Created by Alejandra Ortega and is open-sourced on
+      <a
+        href="https://github.com/AlejandraO1/rock-paper-scissors-app"
+        target="_blank"
+        >GitHub</a
+      >
+    </footer>
     <script src="app.js"></script>
   </body>
 </html>
